--- a/desafioUpMedal/store/blocks/footer.jsonc
+++ b/desafioUpMedal/store/blocks/footer.jsonc
@@ -1,16 +1,23 @@
 {
+    // Dois rodapés diferentes para versão móvel e desktop
     "footer": {
         "blocks": [
             "footer-layout.desktop",
             "footer-layout.mobile"
         ]
     },
+
+    // Duas fileiras para as duas cores do rodapé
+
     "footer-layout.desktop": {
         "children": [
             "flex-layout.row#fileiraPrincipal",
             "flex-layout.row#fileiraSecundaria"
         ]
     },
+
+    // Declaração da primeira fileira e filhos
+
     "flex-layout.row#fileiraPrincipal": {
         "props": {
             "blockClass": "rodapeDesk1"
@@ -22,6 +29,9 @@
             "flex-layout.col#coluna4"
         ]
     },
+
+    // Declaração dos rich texts e colunas
+
     "flex-layout.col#coluna1": {
         "children": [
             "rich-text#saibaMais"
@@ -66,6 +76,9 @@
             "text": "Ajuda"
         }
     },
+
+    // Declaração dos rich texts, segunda fileira e colunas
+
     "flex-layout.row#fileiraSecundaria": {
         "props": {
             "blockClass": "rodapeDesk2"
@@ -98,6 +111,8 @@
             "text": "Español"
         }
     },
+
+    // Declaração da versão móvel do site com layout simplificado, apenas uma cor no rodapé
 
     "footer-layout.mobile": {
         "children": [
