--- a/desafioUpMedal/store/blocks/header/header.jsonc
+++ b/desafioUpMedal/store/blocks/header/header.jsonc
@@ -1,4 +1,5 @@
-{
+{ 
+  // Dois headers diferentes para versão móvel e desktop mais imolementação de menu
   "header": {
     "blocks": [
       "header-layout.desktop",
@@ -9,15 +10,18 @@
   "header.full": {
     "blocks": ["header-layout.desktop", "header-layout.mobile"]
   },
+  // Configurando o tipo de  header para desktop 
   "header-layout.desktop": {
     "children": ["sticky-layout#desktop"]
   },
+  // Usando stick para fixar o header para desktop e implementando 2 fileiras para menus
   "sticky-layout#desktop": {
     "props": {
       "blockClass": "sticky-header"
     },
     "children": ["flex-layout.row#1-desktop","flex-layout.row#2-desktop"]
   },
+  // Implementando a fileira principal do top-menu para desktop
   "flex-layout.row#1-desktop": {
     "props": {
       "horizontalAlign": "center",
@@ -29,23 +33,19 @@
     },
     "children": [
       "flex-layout.col#logo-desktop",
-      //"flex-layout.col#spacer",
       "search-bar#desktop",
       "vtex.menu@2.x:menu#websites",
       "link#signup",
       "minicart.v2"
     ]
   },
+  // Configurando o search bar para desktop
   "search-bar#desktop": {
     "props": {
       "blockClass": "searchheaderdesktop"
     }
   },
-  "flex-layout.col#spacer": {
-    "props": {
-      "width": "grow"
-    }
-  },
+  // Implementando e Configurando a logo para desktop
   "flex-layout.col#logo-desktop": {
     "props": {
       "verticalAlign": "middle"
@@ -60,6 +60,7 @@
       "height": 35
     }
   },
+  // Implementando a fileira secondária do category-menu para desktop
   "flex-layout.row#2-desktop":{
     "props": {
       "blockClass": "category-menu",
@@ -73,24 +74,27 @@
       "flex-layout.col#category-menu"
     ]
   },
+  // Configurando category-menu
   "flex-layout.col#category-menu": {
     "props": {
+      "blockClass": "col-category-menu",
       "verticalAlign": "middle"
     },
     "children": ["vtex.menu@2.x:menu#category-menu"]
   },
+  // Configurando o tipo de  header para mobile 
   "header-layout.mobile": {
     "children": ["sticky-layout#mobile"]
   },
+  // Configurando o tipo de  header para mobile 
   "sticky-layout#mobile": {
     "children": ["flex-layout.row#1-mobile"]
   },
+  // Implementando a fileira principal para mobile
   "flex-layout.row#1-mobile": {
     "children": [
       "drawer",
-      "flex-layout.col#logo-mobile",
-      //"flex-layout.col#spacer",
-      
+      "flex-layout.col#logo-mobile",   
       "search-bar#mobile",
       "minicart.v2#mobile"
     ],
@@ -101,6 +105,7 @@
       "blockClass": "flexrowcontentheadermobile"
     }
   },
+  // Implementando e configurando o top-menu e o category-menu para mobile
    "drawer": {
     "children": ["menu#drawer"]
   },
@@ -120,6 +125,9 @@
       "menu-item#submenulogin-console-credential",
       "menu-item#submenulogin-aws-phd",
       "rich-text#produtos",
+      "menu-item#submenuhardware-aws-snowcone",
+      "menu-item#submenuhardware-aws-snowball",
+      "menu-item#submenuhardware-aws-snowmobile",
       "rich-text#solucoes",
       "menu-item#submenusolucoes-aws-amazon-rds",
       "menu-item#submenusolucoes-aws-aws-lambda",
@@ -197,6 +205,7 @@
       "textColor": "c-on-base--inverted"
     }
   },
+  // Implementando e Configurando a logo para mobile
   "flex-layout.col#logo-mobile": {
     "props": {
       "verticalAlign": "middle"
@@ -212,12 +221,14 @@
       "width": "55"
     }
   },
+  // Configurando o minicart para mobile
   "minicart.v2#mobile": {
     "props": {
       "blockClass": "minicartheadermobile"
     },
     "children": ["minicart-base-content"]
   },
+  // Configurando o search bar para mobile
   "search-bar#mobile": {
     "props": {
       "blockClass": "searchheadermobile"
